--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ authors = [
     {name = "whitecapella1", email = "whitecapella@naver.com"},
 ]
 dependencies = []
-requires-python = "==3.11.*"
+requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 
+[project.scripts]
+whitecapella_cmd = 'whitecapella_cmd.cmd:call'
 
 [tool.pdm]
-distribution = false
+distribution = true
